<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:launchMode="singleTask"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop1"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <!--android:layout_margin="5dp"-->
        <!--android:padding="5dp"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold"
            android:textColor="#800080"
            android:id="@+id/text_cc"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"

            />
        <TextView
            android:id="@+id/timer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold"
            android:text="00:00"
            android:textColor="#7F7F7F"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="#8B7355"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold"
            android:text="0"
            android:textColor="#EE4000"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            />

        <ImageButton
            android:layout_weight="1"
            android:id="@+id/music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/music_start"
            android:padding="0dp"
            android:scaleType="centerCrop"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/layout_marginTop1">
            <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <!--<Button-->
                <!--android:id="@+id/rank_button2"-->
                <!--android:text="@string/rank"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"/>-->

            <Button
                android:id="@+id/restart"
                android:text="@string/restart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"/>
            <!--<Button-->
                <!--android:id="@+id/back_index"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="@string/backindex"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"/>-->
        </LinearLayout>

        <GridLayout
            android:id="@+id/girdLayout"
            android:layout_marginTop="@dimen/layout_marginTop4"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="4"
            android:descendantFocusability="blocksDescendants"
            android:focusable="false"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:background="@color/buttonBack"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginLeft="@dimen/layout_marginTop3"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginLeft="@dimen/layout_marginTop3"
                android:background="@color/buttonBack"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginLeft="@dimen/layout_marginTop3"
                android:background="@color/buttonBack"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button6"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>

            <Button
                android:id="@+id/button7"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button8"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button9"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button10"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button11"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button12"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button13"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button14"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button15"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>
            <Button
                android:id="@+id/button16"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_marginTop="@dimen/layout_marginTop3"
                android:layout_marginLeft="@dimen/layout_marginLeft"
                android:background="@color/buttonBack"/>

        </GridLayout>


            <TextView
                android:layout_gravity="bottom"
                android:id="@+id/textShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:text="Designed by XZS"
                android:layout_weight="1"
                android:layout_marginBottom="30dp"/>
    </LinearLayout>